--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div id="score">Apples eaten: 0</div>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script src="main.js"></script>
 </body>
